# UniPredict

./: .gitignore  README.md
.github/workflows/: update_model.yml
backend/: README.md  main.py  pyproject.toml
backend/api/models/: zscore.py
backend/api/routers/: routers.py
backend/api/services/: predict_zscore.py
data/: README.md
frontend/: App.jsx  README.md  package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/components/: Error.js  (+4 more)
infra/: README.md
ml/: .envfile  README.md  cutoff_2023.csv  explore.ipynb  final_dataset.csv  final_z_scores_with_sat_data.csv  package.json  pyproject.toml  todo.md
ml/cops/: clean_hed.py  cop_2018.csv  cop_2019.csv  cop_2020.csv  cop_2021.csv  cop_2022.csv
ml/perfs/: perf_arts_2019.csv  perf_arts_2020.csv  perf_arts_2021.csv  perf_arts_2022.csv  perf_biological_science_2019.csv  perf_biological_science_2020.csv  perf_biological_science_2021.csv  perf_biological_science_2022.csv  perf_biosystems_technology_2019.csv  perf_biosystems_technology_2020.csv  perf_biosystems_technology_2021.csv  perf_biosystems_technology_2022.csv  perf_commerce_2019.csv  perf_commerce_2020.csv  perf_commerce_2021.csv  perf_commerce_2022.csv  perf_engineering_technology_2019.csv  perf_engineering_technology_2020.csv  perf_engineering_technology_2021.csv  perf_engineering_technology_2022.csv  perf_physical_science_2019.csv  perf_physical_science_2020.csv  perf_physical_science_2021.csv  perf_physical_science_2022.csv
ml/processed_datasets/: all_cops_dataset.csv  all_perfs_dataset.csv
ml/streams/: degree_streams.csv
(+1 files in other folders)
